# persistent-redis

./: README.md  cabal.sandbox.config  persistent-redis.cabal
Database/Persist/: Redis.hs
Database/Persist/Redis/: Config.hs  Internal.hs  Store.hs
tests/: basic-test.hs
