name:            persistent-redis
version:         0.0.1
license:         BSD3
license-file:    LICENSE
author:          Pavel Ryzhov <paul@paulrz.cz>
synopsis:        Backend for the persistent library using Redis.
description:     Based on the Redis package.
category:        Database, Yesod
stability:       Experimental
cabal-version:   >= 1.6
build-type:      Simple

library
    build-depends:   base                  >= 4        && < 5
                   , hedis                 >= 0.6.0    && < 0.7.0
                   , bytestring            >= 0.10.0.0 && < 0.11.0.0
                   , persistent            >= 1.2      && < 1.3
                   , text                  >= 0.8
                   , aeson                 >= 0.5
                   , attoparsec
                   
    exposed-modules: Database.Persist.Redis
    ghc-options:     -Wall
